till batch of superuser module

--- a/FYP/FYP/Views/ExamController/ExamSchedule.cshtml
+++ b/FYP/FYP/Views/ExamController/ExamSchedule.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@model FYP.Models.Schedule
+@{
     ViewBag.Title = "ExamSchedule";
     Layout = "~/Views/Shared/ExamControllerLayout.cshtml";
 }
@@ -28,18 +29,24 @@
                 <div class="panel panel-primary">
                     <div class="panel-heading"><center><b>Create Exam Schedule</b></center></div>
                     <div class="panel-body">
-                        <form action="/ExamController/ExamScheduled" method="post">
-                            <label>Select a Exam</label><br>
-                            <select id="exam" name="exam" class="form-control"></select><br>
+                        @using (Html.BeginForm())
+                        {
+
+                            @Html.Label("Exam Id:")<br>
+                            @Html.TextBoxFor(model => model.Exam_Id, new { @class = "form-control", @readonly  })
+                        }
+                        @*<form action="/ExamController/ExamScheduled" method="post">
+                            <label>Exam Id</label><br>
+                            <input value="@ViewBag.Exam_Id" readonly name="Exam_Id" class="form-control"/><br>
 
                             <label>Select a Time</label><br>
-                            <input type="datetime-local" name="time" class="form-control"/><br>
+                            <input type="datetime-local" name="Time" class="form-control"/><br>
 
                             <label>Select a Room</label><br>
-                            <select id="room" name="room" class="form-control"></select><br>
+                            <select id="room" name="Room" class="form-control"></select><br>
 
                             <input type="submit" class="btn btn-primary submit-btn" value="Create">
-                        </form>
+                        </form>*@
                     </div>
                 </div>
                 <center><a href="/ExamController/Index">Go Back</a></center>
@@ -51,28 +58,6 @@
 
 <script type="text/javascript">
     $(function () {
-        $(document).ready(function () {
-            $.ajax({
-                type: "POST",
-                url: "/ExamController/AjaxMethodForExam",
-                contentType: "application/json; charset=utf-8",
-                dataType: "json",
-                success: function (response) {
-                    len = response.length;
-                    if (len == 0) {
-                        $("#exam").html('<option disabled selected>-There are no Exams in DB-</option>');
-                    }
-                    else {
-                        $("#exam").html('<option disabled selected>-Select a Exam-</option>');
-                        for (var i = 0; i < len; i++) {
-                            $("#exam").append(new Option("Subject Id: " + response[i].Subject_Id + ", Subject Name: " + response[i].Subject_Name + ", Batch: " + response[i].Batch_Id, response[i].Exam_Id));
-                        }
-                    }
-                },
-                error: function (response) {
-                    $("#dep").html('<option disabled selected>-There are no Exams in DB-</option>');
-                }
-            });
             $.ajax({
                 type: "POST",
                 url: "/ExamController/AjaxMethodForRoom",
@@ -95,6 +80,4 @@
                 }
             });
         });
-    });
-
 </script>
