--- a/FYP/FYP/Views/Shared/SuperUserLayout.cshtml
+++ b/FYP/FYP/Views/Shared/SuperUserLayout.cshtml
@@ -32,6 +32,7 @@
                     </li>
                     <li><a href="/SuperUser/ManageDepartment">Departments</a></li>
                     <li><a href="/SuperUser/ManageBatch">Batches</a></li>
+                    <li><a href="/SuperUser/ManageSubject">Subjects</a></li>
                     <li><a href="#">Exam Result</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
