--- a/FYP/FYP/Views/SuperUser/AddDepartment.cshtml
+++ b/FYP/FYP/Views/SuperUser/AddDepartment.cshtml
@@ -8,6 +8,9 @@
     .submit-btn {
         width: 100%;
     }
+    form .error{
+        color:red;
+    }
 </style>
 
 <body>
@@ -19,14 +22,12 @@
                     <div class="panel-heading"><center><b>Add Department</b></center></div>
                     <div class="panel-body">
 
-                        @using (Html.BeginForm())
-                        {
-                            @Html.Label("Department Name")
-                            @Html.TextBoxFor(a => a.Department_Id, new { @class = "form-control", @placeholder = "Example: Bscs" })
-                            @Html.ValidationMessageFor(a => a.Department_Id)<br>
-
+                        <form action="/SuperUser/AddDepartment" method="post">
+                            <label>Department Id</label>
+                            <input type="text" name="Department_Id" id="dep" class = "form-control", placeholder = "Example: Bscs"/>
                             <input type="submit" class="btn btn-primary submit-btn" value="Add">
-                        }
+                        </form>
+
                     </div>
                 </div>
                 <center><a href="/SuperUser/ManageDepartment">Go Back</a></center>
@@ -34,3 +35,31 @@
         </div>
     </div>
 </body>
+<script>
+    $(function () {
+        $("form").validate({
+            rules: {
+                Department_Id: {
+                    required: true,
+                    remote: {
+                        url: "/superuser/isdepartment_idavailable",
+                        type: "post",
+                        data: {
+                            department_id:function () { return $("#dep").val(); },
+                                    },
+                                },
+                            },
+                    },
+            messages: {
+                Department_Id: {
+                    required: "Please enter department id !",
+                    remote: "Department id already exists !"
+                }, 
+               
+            },
+            submit: function (form) {
+                form.submit();
+            }
+        });
+    });
+</script>
