--- a/FYP/FYP/Views/Shared/SuperUserLayout.cshtml
+++ b/FYP/FYP/Views/Shared/SuperUserLayout.cshtml
@@ -4,11 +4,12 @@
     <meta name="viewport" content="width=device-width" />
     <title>@ViewBag.Title</title>
     <script src="~/Scripts/jquery-1.9.1.min.js"></script>
-    <script src="~/Scripts/jquery.validate.min.js"></script>
-    <script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/jquery.validation/1.15.1/jquery.validate.min.js"></script>
+   @* <script src="~/Scripts/jquery.validate.min.js"></script>*@
+    @*<script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>*@
     <link href="~/Content/css/bootstrap.min.css" rel="stylesheet" />
     <script src="~/Content/js/bootstrap.min.js"></script>
-    <link href="~/Content/RemoteValidator.css" rel="stylesheet" />
+    @*<link href="~/Content/RemoteValidator.css" rel="stylesheet" />*@
 
 </head>
 <body>
